# localization_KCD2

./: .gitignore  Dockerfile  docker-compose.yml
.docker/postgres/: init.sql
.docker/qwen/: config.json
.docker/scripts/: dev-init.sh  init-qwen.sh
workspace/: alembic.ini  pyproject.toml
workspace/app/: accent.py  config.py  db.py  ffmpeg_converter.py  helper.py  main.py  make_db.py  parse_game.py  parse_xml.py  translate_wav.py
workspace/app/api/: dependencies.py  oggs.py  subs.py  tts.py
workspace/app/clients/: tts.py  tts_local.py
workspace/app/exceptions/: tts.py
workspace/app/migrations/: env.py  env_acync.py
workspace/app/migrations/versions/: 2026_06_18_1502-eb08c6c9ac74_add_model_en_oggs.py  2026_06_19_1754-68fab624540b_add_all_pathes_in_en_oggs.py  2026_06_20_1711-7cf10084cd42_linked_subtitles_and_audio.py  2026_06_21_1835-772e47986a89_add_none_fields_in_subs.py
workspace/app/models/: oggs.py  subs.py
workspace/app/repositories/: base.py  oggs.py  subs.py
workspace/app/repositories/mappers/: base.py  mappers.py
workspace/app/schemas/: oggs.py  subs.py  tts.py
workspace/app/utils/: accent.py  db_manager.py  generate_tree.py
workspace/app/utils/parsers/: parse_xml.py
