[project]
name = "workspace"
version = "0.1.0"
description = ""
authors = [
    {name = "heist"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "f5-tts (>=1.1.20,<2.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "torchaudio (>=2.11.0,<3.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "ruaccent (>=1.5.8.3,<2.0.0.0)",
    "tqdm (>=4.68.2,<5.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
